@@ -22,8 +22,8 @@
   <email>chuck@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2011-08-30</date>
- <time>11:57:51</time>
+ <date>2011-09-01</date>
+ <time>14:59:38</time>
  <version>
   <release>2.0.6</release>
   <api>2.0.0</api>
@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
-* 
+* [mms] Additional fixes when creating new mailboxes (Bug #10282).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -991,10 +991,10 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2011-08-30</date>
+   <date>2011-09-01</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
-* 
+* [mms] Additional fixes when creating new mailboxes (Bug #10282).
    </notes>
   </release>
  </changelog>
