@@ -2,6 +2,7 @@
 v2.0.6-git
 ----------
 
+[mms] Additional fixes when creating new mailboxes (Bug #10282).
 
 
 ------
